# hyperjump

./: .clang-format  .clang-tidy  .gitmessage  AUTHORS  AUTHORS.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING  CONTRIBUTING.md  ISSUE_TEMPLATE.md  LICENSE  PULL_REQUESTS_MANAGEMENT.md  README  README.md
cmake/: SetupCompiler.cmake
cmake/Compiler/: msvc.cmake
docs/: AUTHORS.md  CONTRIBUTING.md  LICENSE.md  README.md
source/runtime/foundation/: CMakeLists.txt
source/runtime/foundation/example/: CMakeLists.txt  use_allocator.cpp
source/runtime/foundation/include/foundation/allocator/: allocator.h
source/runtime/foundation/include/foundation/allocator/detail/: memory.h
source/runtime/foundation/source/: dummy.cpp
src/launcher/: CMakeLists.txt
src/launcher/src/: main.cpp
src/runtime/foundation/: CMakeLists.txt
src/runtime/foundation/include/foundation/: logging.h  platform.h
src/runtime/foundation/include/foundation/platform/win32/: minimal_win32.h
src/runtime/main/: CMakeLists.txt
src/runtime/main/include/main/: main.h
src/runtime/main/src/: main_linux.cpp  main_mac.cpp  main_win32.cpp
