set(MODULE_NAME "foundation")
set(MODULE_TYPE "lib")
set(TARGET "${MODULE_TYPE}${MODULE_NAME}")

set(INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/include")
set(SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/source")
file(GLOB_RECURSE SOURCES "${INCLUDE_DIR}/${MODULE_NAME}/*.h" "${SOURCE_DIR}/*.h" "${SOURCE_DIR}/*.cpp")

if(BUILD_SHARED)
  add_library(${TARGET} SHARED ${SOURCES})
else(BUILD_SHARED)
  add_library(${TARGET} STATIC ${SOURCES})
endif(BUILD_SHARED)

set_target_properties(${TARGET} PROPERTIES FOLDER "runtime")

target_include_directories(${TARGET}
PUBLIC 
  $<BUILD_INTERFACE:${INCLUDE_DIR}/${MODULE_NAME}>
  $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>
PRIVATE 
  $<BUILD_INTERFACE:${SOURCE_DIR}>
)

install(TARGETS ${TARGET} DESTINATION ${CMAKE_INSTALL_LIBDIR})
install(DIRECTORY ${INCLUDE_DIR} DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})

source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${SOURCES})

if (BUILD_TESTS)
  add_subdirectory(test)
endif(BUILD_TESTS)

if (BUILD_EXAMPLES)
  add_subdirectory(example)
endif(BUILD_EXAMPLES)
